<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:text="@string/family_planning"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <androidx.cardview.widget.CardView
                android:id="@+id/roundCardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20sp"
                android:elevation="0dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20sp"
                    android:src="@drawable/img10"
                    android:contentDescription="@string/welcome_image"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_marginEnd="30sp"
                android:layout_marginStart="30sp"
            android:text="@string/getmoreinfo"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30sp"
                android:layout_marginStart="30sp"
                android:layout_marginTop="25sp"
                android:lineHeight="35sp"
                android:layout_gravity="center"
                android:text="@string/more_info"
                android:textColor="@color/ColorSecondary"
                android:textSize="17sp"
                tools:targetApi="p" />

            <Button
                android:id="@+id/getstartedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:fontFamily="sans-serif-light"
                android:layout_marginTop="120sp"
                android:layout_marginBottom="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/getstarted"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>