<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity_login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <androidx.cardview.widget.CardView
                android:id="@+id/roundCardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="5sp"
                android:elevation="0dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/circleImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20sp"
                    android:src="@drawable/img8"
                    android:contentDescription="@string/welcome_image"

                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_for_free"
                android:textColor="@color/ColorSecondary"
                android:textStyle="normal"
                android:layout_marginTop="20sp"
                android:textSize="18sp"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30sp"
                android:paddingEnd="30sp">
                <LinearLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60sp"
                    android:gravity="center_vertical"
                    android:background="@drawable/background_input"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22sp"
                        android:layout_height="22sp"
                        android:layout_marginStart="10sp"
                        android:contentDescription="@string/email_icon"
                        android:src="@drawable/ic_mail"
                        app:tint="@color/teal_200"
                        tools:ignore="ImageContrastCheck" />

                    <EditText
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55sp"
                        android:background="@null"
                        android:hint="@string/type_your_email"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textWebEmailAddress"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp"
                        android:textColorHint="#78909C"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41sp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:paddingEnd="6dp"
                    android:paddingStart="6dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutEmail"
                    android:background="@color/white"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30sp"
                android:paddingEnd="30sp">
                <LinearLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40sp"
                    android:gravity="center_vertical"
                    android:background="@drawable/background_input"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22sp"
                        android:layout_height="22sp"
                        android:layout_marginStart="10sp"
                        android:contentDescription="@string/email_icon"
                        android:src="@drawable/ic_lock"
                        app:tint="@color/teal_200"
                        tools:ignore="ImageContrastCheck" />

                    <EditText
                        android:id="@+id/textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="55sp"
                        android:background="@null"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp"
                        android:textColorHint="#78909C"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41sp"
                    android:text="@string/labelPassword"
                    android:textAllCaps="true"
                    android:paddingEnd="6dp"
                    android:paddingStart="6dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/layoutPassword"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutPassword"
                    android:background="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginStart="30sp"
                android:checked="true"
                android:layout_gravity="start"
                android:text="@string/remember_me"
                />
            <TextView
                android:id="@+id/passwordForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="30sp"
                android:textColor="@color/purple_500"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/forget_password"/>
            <Button
                android:id="@+id/signButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:layout_marginStart="30sp"
                android:layout_marginEnd="30sp"
                android:layout_marginTop="30sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/sign_in"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20sp"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_you_have_an_account"
                    android:textColor="@color/ColorSecondary"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4sp"
                    android:onClick="createAccount"
                    android:text="@string/create_account"
                    android:textColor="@color/purple_500"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="UsingOnClickInXml,TouchTargetSizeCheck" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="#64030303"
                android:layout_height="1dp"/>
                <TextView
                    android:id="@+id/textOr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textSize="30sp"
                    android:textStyle="bold"
                 />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30sp"
                android:layout_marginBottom="20sp"
                android:layout_marginEnd="30dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="30sp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20sp"
                    android:src="@drawable/facebook_logo"
                    android:contentDescription="@string/facebook"
                 />
                <ImageView
                    android:id="@+id/google"
                    android:layout_width="30sp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20sp"
                    android:src="@drawable/google_logo"
                    android:contentDescription="@string/facebook"
                    />
                <ImageView
                    android:id="@+id/linkedin"
                    android:layout_width="30sp"
                    android:layout_height="30dp"
                    android:src="@drawable/linkedin"
                    android:layout_marginEnd="20sp"
                    android:contentDescription="@string/facebook"
                    />
                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="30sp"
                    android:layout_height="30dp"
                    android:src="@drawable/twitter_logo"
                    android:contentDescription="@string/facebook"
                    />
            </LinearLayout>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>