<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ForgotPasswordActivity">


    <ImageView
        android:id="@+id/backImg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16sp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/back_image"
        android:src="@drawable/ic_backspace_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backImg"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginTop="50dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_reset_it"
                android:textColor="@color/ColorSecondary"
                android:textStyle="normal"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_marginTop="20sp"
                android:textSize="14sp"
                android:layout_gravity="center"
                />
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30sp"
                android:paddingEnd="30sp">
                <LinearLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60sp"
                    android:gravity="center_vertical"
                    android:background="@drawable/background_input"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="22sp"
                        android:layout_height="22sp"
                        android:layout_marginStart="10sp"
                        android:contentDescription="@string/email_icon"
                        android:src="@drawable/ic_mail"
                        app:tint="@color/teal_200"
                        tools:ignore="ImageContrastCheck" />

                    <EditText
                        android:id="@+id/textEmail"
                        android:layout_width="match_parent"
                        android:layout_height="55sp"
                        android:background="@null"
                        android:hint="@string/type_your_email"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textWebEmailAddress"
                        android:paddingStart="10sp"
                        android:paddingEnd="10sp"
                        android:textColorHint="#78909C"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="41sp"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:paddingEnd="6dp"
                    android:paddingStart="6dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/layoutEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutEmail"
                    android:background="@color/white"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <Button
                android:id="@+id/resetButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button"
                android:layout_margin="30sp"

                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/reset_password"/>
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>